--- a/site/style.css
+++ b/site/style.css
@@ -41,8 +41,8 @@ body {
 .bar img,
 .bar canvas {
   display: block;
-  background-color: #8d8d8d;
-  border: 3px double #cdcaca;
+  background-color: #beb5b5;
+  border: 3px double #868686;
   width: 58px;
   height: 58px;
   padding: 2px;
@@ -52,18 +52,18 @@ body {
 }
 .bar img:hover,
 .bar canvas:hover {
-  background-color: #7b7b7b;
-  border-color: #bcb8b8;
+  background-color: #ada2a2;
+  border-color: #747474;
 }
 .bar img:active,
 .bar canvas:active {
-  background-color: #747474;
-  border-color: #b4b0b0;
+  background-color: #a69a9a;
+  border-color: #6d6d6d;
 }
 .bar img.selected,
 .bar canvas.selected {
-  background-color: silver;
-  border-color: #fffefe;
+  background-color: #e2dede;
+  border-color: #acacac;
 }
 .bar img :last-child,
 .bar canvas :last-child {
